Fixed whitespace between columns

--- a/components/Box/Box.css
+++ b/components/Box/Box.css
@@ -2,4 +2,5 @@
     background: pink;
     padding: 10px;
     text-align: justify;
+    border: 3px solid black;
 }
