--- a/components/Section/Section.css
+++ b/components/Section/Section.css
@@ -1,19 +1,22 @@
 .Section {
     display: flex;
     justify-content: space-between;
-    border: 3px solid black;
+    border: 0px solid black;
     width: 100%;
     background: yellow;
 }
 .Section-Header{
     height: 100px;
     justify-content: center;
+    font-size: 20px;
+    border: 3px solid black;
 }
 .Section--description{
     display: inline-block;
-    width: 48%;
-    padding-right: 5px;
-    margin: 0;
+    width: 50%;
+}
+.Section__content {
+    font-size: 16px;
 }
 @media (max-width: 600px) {
     .Section--description {
