--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,5 @@ body {
 	box-sizing: border-box;
 	min-width: 300px;
 	margin: 0;
+	font-size: 0;
 }
